# movie-web

./: .gitignore  Makefile  db.sqlite3  manage.py  pyproject.toml
apps/auth_v2/: admin.py  apps.py  models.py  urls.py
apps/auth_v2/api/: __init__.py  serializers.py  views.py
apps/movie/: admin.py  apps.py  models.py  services.py  urls.py
apps/movie/api/: __init__.py  schemas.py  serializers.py  views.py
core/utils/: api_req.py  services.py
envs/: .env.example
movie_web/: asgi.py  config.py  settings.py  urls.py  wsgi.py
